agregar menu de nav

--- a/style.css
+++ b/style.css
@@ -25,3 +25,46 @@ body{
 .nav-links li{
     margin-left: 20px;
 }
+
+.hero{
+    background-image: url(https://media.admagazine.com/photos/618a635c5e45a526c6be8c7a/master/pass/76739.jpg);
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    color: white;
+    padding: 100px 0;
+}
+
+.hero-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hero h2{
+    font-size: 3rem;
+    margin-bottom: 20px;
+}
+
+.featured-products{
+    padding: 50px;
+    text-align: center;
+}
+
+.product-list{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.product{
+    width: 300px;;
+    margin-bottom: 30px;
+}
+
+.product img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
