--- a/style.css
+++ b/style.css
@@ -120,11 +120,12 @@ header h1{
 #featured-products h2 {
     font-size: 60px;
     font-weight:bolder
-    padding-bottom: 30px;
+    padding-top: 30px;
     text-align: center;
     padding-top: 30px;
     padding-bottom: 30px;
 } 
+
 
 .product {
     border-radius: 10px;
@@ -182,6 +183,47 @@ margin-bottom: 10px;
     text-decoration: none;
     font-weight: bold;
     font-size: 26px;
+}
+
+/*POSTRES*/
+.postres{
+    padding: 50px;
+    text-align: center;
+}
+
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr)); /*responsive*/
+    gap: 20px;
+}
+
+.postre img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.equipo{
+    width: 50px;
+    text-align: center;
+}
+
+.miembro img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.equipo-container{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.miembro{
+    width: 200px;
+    margin-bottom: 35px;
 }
 
 footer{
