--- a/style.css
+++ b/style.css
@@ -290,3 +290,37 @@ footer .contenido{
     border-radius: 4px;
     cursor: pointer;
 }
+
+#sandwiches{
+    padding: 50px;
+    text-align: center;
+}
+
+.grid-sandwich{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /*4 columnas de igual tamaño*/
+    grid-template-rows: repeat(2, 250px);
+    gap: 20px;
+    grid-template-areas:
+    "sandwich1 sandwich1 sandwich2 sandwich3"
+    "sandwich1 sandwich1 sandwich4 sandwich5";
+}
+
+.sandwich{
+    border: 1px solid green;
+    padding: 20px;
+}
+
+
+.sandwich img{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
+
+.sandwich:nth-child(1) {grid-area:sandwich1;}
+.sandwich:nth-child(2) {grid-area:sandwich2;}
+.sandwich:nth-child(3) {grid-area:sandwich3;}
+.sandwich:nth-child(4) {grid-area:sandwich4;}
+.sandwich:nth-child(5) {grid-area:sandwich5;}
