--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap');
 
 *{
     padding: 0;
@@ -7,7 +8,7 @@
 }
 
 body{
-    font-family: "Montserrat"
+    font-family: "Poppins"
 }
 
 .container {
@@ -16,16 +17,19 @@ body{
     margin: 0 auto;
 }
 
-header h1{
-    font-size: 35px;
-}
+/***HEADER***/
+
 
 .navbar{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: rgb(247, 213, 171);
+    background-color: black;
+}
+
+.logo img{
+    width: 13vw;
 }
 
 .nav-links{
@@ -36,7 +40,7 @@ header h1{
 }
 
 .nav-links :hover{
-    color: brown;
+    color: #cd3229;
 }
 
 .nav-links li{
@@ -45,10 +49,10 @@ header h1{
 
 .nav-links a{
     text-decoration: none;
-    color: #000000;
-    font-size: 20px;
+    color: #fff;
+    font-size: px;
     font-weight:600;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 
 #btn-compra-inicio{
