--- a/style.css
+++ b/style.css
@@ -232,6 +232,109 @@ body{
     object-fit: cover;
 }
 
+/***SECCIÓN BEST SELLERS****/
+
+#best-sellers{
+    align-items: center;
+}
+
+#franja-azul{
+    border: 8px solid #05ade5;
+}
+
+#franja-roja{
+    border: 8px solid #fc242c;
+}
+
+#franja-amarilla{
+    border: 8px solid #fcb91c;
+}
+
+#titulo h3{
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    font-weight:lighter;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+#best-sellers p{
+    text-align: center;
+    color: white;;
+}
+
+.card{
+    height: 300px;
+    width: 340px;
+    padding: 0;
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    overflow: hidden; /* Asegura que la imagen no se desborde */
+    transition: transform 0.3s ease-in-out; /* Transición suave para el efecto de zoom */
+    background-size: cover;
+    background-position: center;
+    transition: background-size 0.3s ease-in-out; /* Transición para el zoom */
+}
+
+.card1 {
+    background-image: url(img-friends/best-sellers/central\ perk\ pin.webp);
+}
+
+.card2 {
+    background-image: url(img-friends/best-sellers/central\ perk\ playera.webp);
+}
+
+.card3 {
+    background-image: url(img-friends/best-sellers/crap\ bag\ tote.webp);
+}
+
+.card4 {
+    background-image: url(img-friends/best-sellers/How\ you\ doin\ jersey.webp);
+}
+
+.card5 {
+    background-image: url(img-friends/best-sellers/hugsy.webp);
+}
+
+.card6 {
+    background-image: url(img-friends/best-sellers/Marco\ amarillo.webp);
+}
+
+.card7 {
+    background-image: url(img-friends/best-sellers/Taza\ Central\ Perk.webp);
+}
+
+.card-titulo{
+    color: black;
+    background-color: #8073cd;
+    text-align: center;
+    width: 100%;
+    height: 40px;
+    padding-top: 12px;
+    font-family: "Montserrat";
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.splide.is-initialized, .splide.is-rendered {
+    visibility: visible;
+    width: 200vh;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.card:hover .card1 {
+    background-size: 120%; /* Aumenta el tamaño de la imagen al hacer hover */
+}
+
+.card:hover {
+    transform: scale(1.05); /* Ligeramente aumenta el tamaño de la tarjeta */
+}
+
 /*Seccion de personal*/
 .equipo{
     background-color: antiquewhite;
