--- a/style.css
+++ b/style.css
@@ -18,7 +18,36 @@ body{
 }
 
 /***HEADER***/
+header {
+    position: relative;
+    transition: background-color 0.1s, box-shadow 0.1s;
+}
 
+header.scrolled {
+
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    color: white;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    padding: 0;
+    height: 60px;
+}
+
+header.scrolled .navbar{
+    background-color: #08341c;
+    height: 12vh;
+}
+
+header.scrolled a{
+    color: white;
+    font-weight: bold;
+}
+
+header.scrolled img{
+    height: 25%;
+    margin-left: 10%;
+}
 
 .navbar{
     display: flex;
@@ -152,12 +181,13 @@ body{
     width: 150px;
     padding: 0;
     margin-right: 20px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
     border-radius: 10px;
-    overflow: hidden; /* Asegura que la imagen no se desborde */
-    transition: transform 0.3s ease-in-out; /* Transición suave para el efecto de zoom */
+    overflow: hidden; 
+    transition: transform 0.3s ease-in-out;
     background-size: cover;
     background-position: center; 
 }
@@ -188,11 +218,11 @@ body{
 
 
 .card-bebida:hover .img1 {
-    background-size: 120%; /* Aumenta el tamaño de la imagen al hacer hover */
+    background-size: 130%;
 }
 
 .card-bebida:hover {
-    transform: scale(1.05); /* Ligeramente aumenta el tamaño de la tarjeta */
+    transform: scale(1.1); /* Ligeramente aumenta el tamaño de la tarjeta */
 }
 
 .card-bebida h3{
@@ -213,23 +243,26 @@ body{
     color: black;
 }
 
-/*POSTRES*/
-.postres{
-    padding: 50px;
-    text-align: center;
-    color: white;
+/*Video*/
+.kb-blocks-bg-video-container .background-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: auto;
+    width: 100vw;
+    min-width: 100%;
+    min-height: 100%;
+    margin-bottom: 0;
 }
 
-.grid-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px,1fr)); /*responsive*/
-    gap: 20px;
-}
-
-.postre img{
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+.banner-imagen img{
+    width: 60vw;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center; /* Centra la imagen horizontalmente */
+    align-items: center;     /* Opcional: centra verticalmente */
+    margin-bottom: 0;
 }
 
 /***SECCIÓN BEST SELLERS****/
@@ -272,11 +305,11 @@ body{
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    overflow: hidden; /* Asegura que la imagen no se desborde */
-    transition: transform 0.3s ease-in-out; /* Transición suave para el efecto de zoom */
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out;
     background-size: cover;
     background-position: center;
-    transition: background-size 0.3s ease-in-out; /* Transición para el zoom */
+    transition: background-size 0.3s ease-in-out; 
 }
 
 .card1 {
@@ -288,7 +321,7 @@ body{
 }
 
 .card3 {
-    background-image: url(img-friends/best-sellers/crap\ bag\ tote.webp);
+    background-image: url(img-friends/best-sellers/tote.png);
 }
 
 .card4 {
@@ -328,11 +361,11 @@ body{
 }
 
 .card:hover .card1 {
-    background-size: 120%; /* Aumenta el tamaño de la imagen al hacer hover */
+    background-size: 130%; 
 }
 
 .card:hover {
-    transform: scale(1.05); /* Ligeramente aumenta el tamaño de la tarjeta */
+    transform: scale(1.1); 
 }
 
 /*Seccion de personal*/
@@ -401,7 +434,8 @@ body{
 .columna-experiencias{
     align-items: center;
     background-color: white;
-    width: 60vh;
+    width: 60vw;
+    height: 35vh;
     padding: 30px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -410,7 +444,7 @@ body{
 .columna-experiencias img{
     width: 80vw;
     padding-left: 1vw;
-    padding-top: 4vh;
+    padding-top: 3vh;
     margin-top: 10px;
 }
 
@@ -432,7 +466,7 @@ body{
 }
 
 .img-expeciencias img{
-    height: 250px;
+    height: 35vh;
 }
 
 #experiencias-sec h2{
@@ -503,7 +537,7 @@ body{
 
 .newsletter h3{
     color: white;
-    font-weight: lighter;
+    font-weight: 300;
     margin-right: 10px;
 }
 
