--- a/responsive.css
+++ b/responsive.css
@@ -44,4 +44,46 @@
     .splide.is-initialized, .splide.is-rendered {
         width: 120vh;
     }
+
+    .contenedor-sandwiches{
+        display: grid;
+        grid-template-columns:40vw 40vw;
+        grid-template-rows: 50vh 50vh 50vh;
+        row-gap: 10px;
+        column-gap: 10px;
+    }
+    
+    .item-1{
+        grid-column: 1/2;
+        grid-row: 1/3;
+    }
+    
+    .item-2{
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    
+    .item-3{
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+    
+    .item-4{
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+    
+    .item-5{
+        grid-column: 2/3;
+        grid-row: 3/4;
+    }
+    
+    #sandwiches .sandwich .gif img{
+        height: 17vh;
+        width: auto;
+    }
+
+    #sandwiches img{
+        height: 50vh;
+    }
 }
