--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ header {
 }
 
 header.scrolled {
-
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     color: white;
     position: fixed;
@@ -132,6 +131,7 @@ header.scrolled img{
 .hero p span{
     font-style: italic;
 }
+
 
 
 /****TERMINA HEADER, COMIENZA CONTENIDO****/
@@ -562,24 +562,11 @@ header.scrolled img{
 
 
 /****página independiente menu****/
+
 #sandwiches{
     padding: 50px;
     text-align: center;
     background-image: url(img-friends/background\ negro.jpg);
-}
-
-#franja-azul, #franja-roja, #franja-amarilla{
-    padding: 0;
-}
-
-.grid-sandwich{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /*4 columnas de igual tamaño*/
-    grid-template-rows: repeat(2, 250px);
-    gap: 20px;
-    grid-template-areas:
-    "sandwich1 sandwich1 sandwich2 sandwich3"
-    "sandwich1 sandwich1 sandwich4 sandwich5";
 }
 
 .sandwich{
@@ -595,23 +582,102 @@ header.scrolled img{
     padding-top: 30px;
 }
 
-.sandwich h3{
+#sandwiches p{
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    font-weight:bold;
+    margin-bottom: 20px;
+}
+
+#sandwiches p span{
+    font-style: italic;
+}
+
+#sandwiches .sandwich h2 {
     color: black;
     font-weight: bold;
     font-size: 20px;
     padding-top: 0;
 }
 
-
-.sandwich img{
+#sandwiches .sandwich img {
     width: 100%;
-    height: 150px;
+    height: 28vh;
+    object-fit: cover;
+    margin-bottom: 5px;
+    transition: transform 0.3s ease;
+}
+
+#sandwiches .sandwich .gif img{
+    height: 20vh;
+    width: auto;
+}
+
+.sandwich:hover img {
+    transform: scale(1.1);  
+}
+
+#sandwiches .sandwich p {
+    color: black;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+#sandwiches .sandwich p span{
+    font-style: italic;
+}
+
+#sandwiches .item-1 img {
+    width: 100%;
+    height: 35vh;
     object-fit: cover;
     margin-bottom: 5px;
 }
 
-.sandwich:nth-child(1) {grid-area:sandwich1;}
-.sandwich:nth-child(2) {grid-area:sandwich2;}
-.sandwich:nth-child(3) {grid-area:sandwich3;}
-.sandwich:nth-child(4) {grid-area:sandwich4;}
-.sandwich:nth-child(5) {grid-area:sandwich5;}
+.contenedor-sandwiches{
+    display: grid;
+    grid-template-columns:30vw 30vw 30vw;
+    grid-template-rows: 45vh 45vh;
+    row-gap: 10px;
+    column-gap: 10px;
+}
+
+.item-1{
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+
+.item-2{
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.item-3{
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+.item-4{
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+.item-5{
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+
+#sandwiches img{
+    height: 70vh;
+}
+
+#sandwiches .pizza p{
+    margin-top: 30px;
+}
+
+#sandwiches .pizza h3{
+    color: white;
+    font-size: 38px;
+    font-weight:lighter
+}
